@@ -2,19 +2,18 @@ package ch.ffhs.webe.hs2023.viergewinnt.user;
 
 import ch.ffhs.webe.hs2023.viergewinnt.base.ErrorCode;
 import ch.ffhs.webe.hs2023.viergewinnt.base.VierGewinntException;
-import ch.ffhs.webe.hs2023.viergewinnt.user.dto.UserDto;
+import ch.ffhs.webe.hs2023.viergewinnt.user.dto.LoginDto;
 import ch.ffhs.webe.hs2023.viergewinnt.user.model.User;
 import ch.ffhs.webe.hs2023.viergewinnt.user.repository.UserRepository;
 import ch.ffhs.webe.hs2023.viergewinnt.user.values.Role;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -30,20 +29,24 @@ class UserServiceImpl implements UserService {
     }
 
     @Override
-    public User registerNewUserAccount(final UserDto userDto) throws VierGewinntException {
-        if (this.emailExists(userDto.getEmail())) {
+    public User registerNewUserAccount(final LoginDto loginDto) throws VierGewinntException {
+        if (this.emailExists(loginDto.getEmail())) {
             throw VierGewinntException.of(
                     ErrorCode.EMAIL_ALREADY_EXISTS,
-                    String.format("Email address %s already in use for another account", userDto.getEmail())
+                    String.format("Email address %s already in use for another account", loginDto.getEmail())
             );
         }
 
         final User user = new User();
-        user.setFirstName(userDto.getFirstName());
-        user.setLastName(userDto.getLastName());
-        user.setPassword(this.passwordEncoder.encode(userDto.getPassword()));
-        user.setEmail(userDto.getEmail());
-        user.setRoles(Collections.singletonList(Role.USER));
+        user.setFirstName(loginDto.getFirstName());
+        user.setLastName(loginDto.getLastName());
+        user.setPassword(this.passwordEncoder.encode(loginDto.getPassword()));
+        user.setEmail(loginDto.getEmail());
+        if (this.userRepository.countUsers() == 0) {
+            user.setRoles(List.of(Role.USER, Role.ADMIN));
+        } else {
+            user.setRoles(Collections.singletonList(Role.USER));
+        }
 
         return this.userRepository.save(user);
     }
@@ -64,25 +67,20 @@ class UserServiceImpl implements UserService {
                         "User with email " + email + " not found"));
     }
 
-    /**
-     * Ruft den aktuell authentifizierten Benutzer ab
-     * @return User
-     */
     @Override
-    public User getCurrentlyAuthenticatedUser() {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        return getUserByEmail(username);
+    public void setCurrentGameId(final int userId, final int gameId) {
+        final var user = this.getUserById(userId);
+        user.pushCurrentGameId(gameId);
+
+        this.userRepository.save(user);
     }
 
     @Override
-    public Optional<User> findUserById(final int id) {
-        return this.userRepository.findById(id);
+    public List<User> getAllWithSession() {
+        return this.userRepository.findWithSession();
     }
 
     private boolean emailExists(final String email) {
         return this.userRepository.findByEmail(email).isPresent();
     }
-
-
-
 }
